a little more info

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <title>DIG 245 Usability Test</title>
 
 <!-- CSS -->
+
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
 <link rel="stylesheet" href="assets/css/styles.css">
 </head>
@@ -18,9 +19,16 @@
 <img class = "col-12" id="image" src="assets/img/nyt.png">
 <h1>Usability Test</h1>
 
+<!-- line -->
+<div class ="row" class="col-12">
+  <svg xmlns="http://www.w3.org/2000/svg" width="1196" height="1" viewBox="0 0 1196 1" fill="none">
+<line y1="0.5" x2="1196" y2="0.5" stroke="black"/>
+</svg>
+</div>
+
 <!-- task1 -->
 <div class ="row">
-  <h3 class ="col-sm-12">TASK</h3>
+  <h3 class ="col-12">TASK 1</h3>
 </div>
 
 <!-- find games crossword -->
@@ -51,8 +59,8 @@
 <br>
 
 <div class ="row">
-  <h3 class="col-sm-6">STEPS</h3>
-  <ol class ="col-sm-6">
+  <h3 class="adjusting col-6">STEPS</h3>
+  <ol class ="adjusting col-6">
     <li>Opened left sidebar</li>
     <li>Scrolled through the sections</li>
     <li>Found games under “Living”</li>
@@ -60,13 +68,26 @@
 </div>
 
 <div class ="row">
-  <h3 class="col-sm-6">TIME</h3>
-  <p class="col-sm-6">13 seconds</p>
+  <h3 class="adjusting col-6">TIME</h3>
+  <p class="adjusting col-6">13 seconds</p>
+</div>
+
+<div class ="row">
+  <h3 class ="col-6">COMPLETED?</h3>
+  <p class="col-6">
+✅ Completed pretty easily. The subject had some prior knowledge of games with the New York Times.</p>
+</div>
+
+<!-- line -->
+<div class ="row" class="col-12">
+  <svg xmlns="http://www.w3.org/2000/svg" width="1196" height="1" viewBox="0 0 1196 1" fill="none">
+<line y1="0.5" x2="1196" y2="0.5" stroke="black"/>
+</svg>
 </div>
 
 <!-- task2 -->
 <div class ="row">
-  <h3 class ="col-sm-12">TASK</h3>
+  <h3 class ="col-12">TASK 2</h3>
 </div>
 <!-- find games crossword -->
 <div class="row">
@@ -117,8 +138,8 @@
 <br>
 
 <div class ="row">
-  <h3 class="col-sm-6">STEPS</h3>
-  <ol class ="col-sm-6">
+  <h3 class="col-6">STEPS</h3>
+  <ol class ="col-6">
     <li>Opened left sidebar again</li>
 <li>Scrolled through briefly, closed it</li>
 <li>Clicked back button</li>
@@ -133,13 +154,26 @@
 </div>
 
 <div class ="row">
-  <h3 class="col-sm-6">TIME</h3>
-  <p class="col-sm-6">55 seconds</p>
+  <h3 class="col-6">TIME</h3>
+  <p class="col-6">55 seconds</p>
+</div>
+
+<div class ="row">
+  <h3 class ="col-6">COMPLETED?</h3>
+  <p class="col-6">
+✅ The longest and most difficult task. Subject became very frustrated.</p>
+</div>
+
+<!-- line -->
+<div class ="row" class="col-12">
+  <svg xmlns="http://www.w3.org/2000/svg" width="1196" height="1" viewBox="0 0 1196 1" fill="none">
+<line y1="0.5" x2="1196" y2="0.5" stroke="black"/>
+</svg>
 </div>
 
 <!-- task3 -->
 <div class ="row">
-  <h3 class ="col-sm-12">TASK</h3>
+  <h3 class ="col-12">TASK 3</h3>
 </div>
 <!-- find games crossword -->
 <div class="row">
@@ -190,8 +224,8 @@
 <br>
 
 <div class ="row">
-  <h3 class="col-sm-6">STEPS</h3>
-  <ol class ="col-sm-6">
+  <h3 class="col-6">STEPS</h3>
+  <ol class ="col-6">
     <li>Thought the homepage might be trending page</li>
 <li>Went to homepage by clicking logo</li>
 <li>Couldn’t find search bar there</li>
@@ -201,13 +235,25 @@
 </div>
 
 <div class ="row">
-  <h3 class="col-sm-6">TIME</h3>
-  <p class="col-sm-6">30 seconds</p>
+  <h3 class="col-6">TIME</h3>
+  <p class="col-6">30 seconds</p>
+</div>
+
+<div class ="row">
+  <h3 class ="col-6">COMPLETED?</h3>
+  <p class="col-6">
+✅ A bit difficult, but use of search bar was helpful.</p>
+</div>
+<!-- line -->
+<div class ="row" class="col-12">
+  <svg xmlns="http://www.w3.org/2000/svg" width="1196" height="1" viewBox="0 0 1196 1" fill="none">
+<line y1="0.5" x2="1196" y2="0.5" stroke="black"/>
+</svg>
 </div>
 
 <!-- task4 -->
 <div class ="row">
-  <h3 class ="col-sm-12">TASK</h3>
+  <h3 class ="col-12">TASK 4</h3>
 </div>
 
 <div class="row">
@@ -260,8 +306,8 @@
 <br>
 
 <div class ="row">
-  <h3 class="col-sm-6">STEPS</h3>
-  <ol class ="col-sm-6">
+  <h3 class="col-6">STEPS</h3>
+  <ol class ="col-6">
     <li>Opened left sidebar</li>
 <li>Looked at “News” section</li>
 <li>Saw (but didn’t click) “Today’s Paper”</li>
@@ -273,13 +319,26 @@
 </div>
 
 <div class ="row">
-  <h3 class="col-sm-6">TIME</h3>
-  <p class="col-sm-6">34 seconds</p>
+  <h3 class="col-6">TIME</h3>
+  <p class="col-6">34 seconds</p>
+</div>
+
+<div class ="row">
+  <h3 class ="col-6">COMPLETED?</h3>
+  <p class="col-6">
+✅ Again, difficult, but the calendar feature helped the user.</p>
+</div>
+
+<!-- line -->
+<div class ="row" class="col-12">
+  <svg xmlns="http://www.w3.org/2000/svg" width="1196" height="1" viewBox="0 0 1196 1" fill="none">
+<line y1="0.5" x2="1196" y2="0.5" stroke="black"/>
+</svg>
 </div>
 
 <!-- task5 -->
 <div class ="row">
-  <h3 class ="col-sm-12">TASK</h3>
+  <h3 class ="col-12">TASK 5</h3>
 </div>
 
  <!-- return home crossword -->
@@ -309,24 +368,81 @@
 </svg>
 </div>
 
+<br>
+
 <div class ="row">
-  <h3 class="col-sm-6">STEPS</h3>
-  <ol class ="col-sm-6">
+  <h3 class="col-6">STEPS</h3>
+  <ol class ="col-6">
     <li>Clicked on NYT Logo at top of page</li>
 </ol>
 </div>
 
 <div class ="row">
-  <h3 class="col-sm-6">TIME</h3>
-  <p class="col-sm-6">1 second</p>
+  <h3 class="col-6">TIME</h3>
+  <p class="col-6">1 second</p>
 </div>
 
-<!-- great features -->
-<div class = "row">
-<img src="assets/img/searchbar.png">
-<img src="assets/img/nyt.png">
-<img src="assets/img/menu.png">
+<div class ="row">
+  <h3 class ="col-6">COMPLETED?</h3>
+  <p class="col-6">
+✅ Easiest task. Completed with no effort.</p>
 </div>
+
+<!-- line -->
+<div class ="row" class="col-12">
+  <svg xmlns="http://www.w3.org/2000/svg" width="1196" height="1" viewBox="0 0 1196 1" fill="none">
+<line y1="0.5" x2="1196" y2="0.5" stroke="black"/>
+</svg>
+</div>
+
+ <br>
+
+<!-- great features -->
+<div class ="row">
+  <svg xmlns="http://www.w3.org/2000/svg" width="403" height="30" viewBox="0 0 403 30" fill="none">
+<rect x="56.5" y="0.5" width="29" height="29" fill="white" stroke="black"/>
+<path d="M77.2061 15.813H67.6548V23.6235H78.75V26H64.7485V3.96094H78.5986V6.35254H67.6548V13.4365H77.2061V15.813Z" fill="black"/>
+<rect x="84.5" y="0.5" width="29" height="29" fill="white" stroke="black"/>
+<path d="M103.617 20.248H94.3833L92.3096 26H89.3125L97.7285 3.96094H100.271L108.703 26H105.721L103.617 20.248ZM95.2612 17.8564H102.754L99 7.54834L95.2612 17.8564Z" fill="black"/>
+<rect x="112.5" y="0.5" width="29" height="29" fill="white" stroke="black"/>
+<path d="M135.537 6.35254H128.453V26H125.562V6.35254H118.493V3.96094H135.537V6.35254Z" fill="black"/>
+<rect x="199.5" y="0.5" width="29" height="29" fill="white" stroke="black"/>
+<path d="M220.206 15.813H210.655V23.6235H221.75V26H207.749V3.96094H221.599V6.35254H210.655V13.4365H220.206V15.813Z" fill="black"/>
+<rect x="228.5" y="0.5" width="29" height="29" fill="white" stroke="black"/>
+<path d="M247.617 20.248H238.383L236.31 26H233.312L241.729 3.96094H244.271L252.703 26H249.721L247.617 20.248ZM239.261 17.8564H246.754L243 7.54834L239.261 17.8564Z" fill="black"/>
+<rect x="170.5" y="0.5" width="29" height="29" fill="white" stroke="black"/>
+<path d="M191.146 16.2671H181.897V26H178.991V3.96094H192.644V6.35254H181.897V13.8906H191.146V16.2671Z" fill="black"/>
+<rect x="28.5" y="0.5" width="29" height="29" fill="white" stroke="black"/>
+<path d="M44.0898 17.0845H38.9131V26H35.9917V3.96094H43.2876C45.77 3.96094 47.6772 4.52604 49.0093 5.65625C50.3514 6.78646 51.0225 8.43132 51.0225 10.5908C51.0225 11.9632 50.6491 13.159 49.9023 14.1782C49.1657 15.1974 48.1364 15.9593 46.8145 16.4639L51.9912 25.8184V26H48.873L44.0898 17.0845ZM38.9131 14.708H43.3784C44.8215 14.708 45.9668 14.3346 46.8145 13.5879C47.6722 12.8411 48.1011 11.8421 48.1011 10.5908C48.1011 9.22852 47.6924 8.18408 46.875 7.45752C46.0677 6.73096 44.8971 6.36263 43.3633 6.35254H38.9131V14.708Z" fill="black"/>
+<rect x="0.5" y="0.5" width="29" height="29" fill="white" stroke="black"/>
+<path d="M23.2646 23.1089C22.5179 24.1785 21.4735 24.9808 20.1313 25.5156C18.7993 26.0404 17.2453 26.3027 15.4692 26.3027C13.673 26.3027 12.0786 25.884 10.686 25.0464C9.29346 24.1987 8.2137 22.9979 7.44678 21.4438C6.68994 19.8898 6.30143 18.0885 6.28125 16.04V14.1177C6.28125 10.7977 7.05322 8.22445 8.59717 6.39795C10.1512 4.57145 12.3309 3.6582 15.1362 3.6582C17.437 3.6582 19.2887 4.24854 20.6914 5.4292C22.0941 6.59977 22.9518 8.26481 23.2646 10.4243H20.3584C19.8135 7.50798 18.0778 6.0498 15.1514 6.0498C13.2038 6.0498 11.7254 6.736 10.7163 8.1084C9.71729 9.4707 9.21273 11.4486 9.20264 14.042V15.8433C9.20264 18.3156 9.76774 20.2834 10.8979 21.7466C12.0282 23.1997 13.557 23.9263 15.4844 23.9263C16.5742 23.9263 17.5278 23.8052 18.3452 23.563C19.1626 23.3208 19.8387 22.9121 20.3735 22.3369V17.3872H15.2725V15.0259H23.2646V23.1089Z" fill="black"/>
+<rect x="141.5" y="0.5" width="29" height="29" fill="black" stroke="black"/>
+<rect x="257.5" y="0.5" width="29" height="29" fill="white" stroke="black"/>
+<path d="M280.537 6.35254H273.453V26H270.562V6.35254H263.493V3.96094H280.537V6.35254Z" fill="black"/>
+<rect x="315.5" y="0.5" width="29" height="29" fill="white" stroke="black"/>
+<path d="M331.09 17.0845H325.913V26H322.992V3.96094H330.288C332.77 3.96094 334.677 4.52604 336.009 5.65625C337.351 6.78646 338.022 8.43132 338.022 10.5908C338.022 11.9632 337.649 13.159 336.902 14.1782C336.166 15.1974 335.136 15.9593 333.814 16.4639L338.991 25.8184V26H335.873L331.09 17.0845ZM325.913 14.708H330.378C331.821 14.708 332.967 14.3346 333.814 13.5879C334.672 12.8411 335.101 11.8421 335.101 10.5908C335.101 9.22852 334.692 8.18408 333.875 7.45752C333.068 6.73096 331.897 6.36263 330.363 6.35254H325.913V14.708Z" fill="black"/>
+<rect x="344.5" y="0.5" width="29" height="29" fill="white" stroke="black"/>
+<path d="M365.206 15.813H355.655V23.6235H366.75V26H352.749V3.96094H366.599V6.35254H355.655V13.4365H365.206V15.813Z" fill="black"/>
+<rect x="373.5" y="0.5" width="29" height="29" fill="white" stroke="black"/>
+<path d="M387.849 16.1763C385.356 15.4598 383.54 14.5819 382.399 13.5425C381.269 12.493 380.704 11.2013 380.704 9.66748C380.704 7.9318 381.395 6.49886 382.778 5.36865C384.17 4.22835 385.977 3.6582 388.197 3.6582C389.71 3.6582 391.058 3.95085 392.238 4.53613C393.429 5.12142 394.347 5.92871 394.993 6.95801C395.649 7.9873 395.977 9.11247 395.977 10.3335H393.056C393.056 9.00146 392.632 7.95703 391.784 7.2002C390.937 6.43327 389.741 6.0498 388.197 6.0498C386.764 6.0498 385.644 6.36768 384.836 7.00342C384.039 7.62907 383.641 8.50195 383.641 9.62207C383.641 10.5202 384.019 11.2821 384.776 11.9077C385.543 12.5233 386.84 13.0884 388.666 13.603C390.503 14.1177 391.936 14.6878 392.965 15.3135C394.004 15.929 394.771 16.6506 395.266 17.478C395.77 18.3055 396.022 19.2793 396.022 20.3994C396.022 22.1855 395.326 23.6185 393.934 24.6982C392.541 25.7679 390.679 26.3027 388.348 26.3027C386.834 26.3027 385.422 26.0151 384.11 25.4399C382.798 24.8547 381.784 24.0575 381.067 23.0483C380.361 22.0392 380.008 20.8939 380.008 19.6123H382.929C382.929 20.9443 383.419 21.9989 384.397 22.7759C385.386 23.5428 386.703 23.9263 388.348 23.9263C389.882 23.9263 391.058 23.6134 391.875 22.9878C392.692 22.3621 393.101 21.5094 393.101 20.4297C393.101 19.3499 392.723 18.5174 391.966 17.9321C391.209 17.3368 389.837 16.7515 387.849 16.1763Z" fill="black"/>
+<rect x="286.5" y="0.5" width="29" height="29" fill="white" stroke="black"/>
+<path d="M309.022 3.96094V18.9463C309.012 21.0251 308.356 22.7254 307.055 24.0474C305.763 25.3693 304.007 26.111 301.787 26.2725L301.015 26.3027C298.603 26.3027 296.681 25.6519 295.248 24.3501C293.815 23.0483 293.089 21.2572 293.068 18.9766V3.96094H295.944V18.8857C295.944 20.4801 296.383 21.7214 297.261 22.6094C298.139 23.4873 299.39 23.9263 301.015 23.9263C302.66 23.9263 303.916 23.4873 304.784 22.6094C305.662 21.7314 306.101 20.4953 306.101 18.9009V3.96094H309.022Z" fill="black"/>
+</svg>
+</div>
+
+ <br>
+
+<div class = "row">
+<img class="col-6" src="assets/img/searchbar.png">
+<img class="col-6" src="assets/img/nyt.png">
+</div>
+
+<br>
+
+<div class="row">
+  <img id="image" class="col-5" src="assets/img/menu.png">
+</div>
+
 
 <!-- javascript -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
