--- a/index.html
+++ b/index.html
@@ -385,7 +385,7 @@
 <div class ="row">
   <h3 class ="col-6">COMPLETED?</h3>
   <p class="col-6">
-✅ Easiest task. Completed with no effort.</p>
+✅ Easiest task. Completed with no effort. The subject's recall at this point of the process also aide their getting back home.</p>
 </div>
 
 <!-- line -->
@@ -431,6 +431,11 @@
 </div>
 
  <br>
+
+ <div class ="row">
+   <p class="reccomendations col-8">
+The search bar, NYT home button logo, and menu bars were all super important features that helped the user navigate the page. The interactivity of the features was especially helpful for the user. If NYT was to do a redesign, I'd recommend more interactive features and clearer categories for distinguishing sections of the paper.</p>
+ </div>
 
 <div class = "row">
 <img class="col-6" src="assets/img/searchbar.png">
