--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
 <body>
 
 <!-- visible content goes here -->
-<img class = "col-12" id="image" src="assets/img/nyt.png">
+<img class = "col-12 image" src="assets/img/nyt.png" alt="New York Times Header Logo">
 <h1>Usability Test</h1>
 
 <!-- line -->
-<div class ="row" class="col-12">
+<div class ="row col-12">
   <svg xmlns="http://www.w3.org/2000/svg" width="1196" height="1" viewBox="0 0 1196 1" fill="none">
 <line y1="0.5" x2="1196" y2="0.5" stroke="black"/>
 </svg>
@@ -78,7 +78,7 @@
 </div>
 
 <!-- line -->
-<div class ="row" class="col-12">
+<div class ="row col-12">
   <svg xmlns="http://www.w3.org/2000/svg" width="1196" height="1" viewBox="0 0 1196 1" fill="none">
 <line y1="0.5" x2="1196" y2="0.5" stroke="black"/>
 </svg>
@@ -164,7 +164,7 @@
 </div>
 
 <!-- line -->
-<div class ="row" class="col-12">
+<div class ="row col-12">
   <svg xmlns="http://www.w3.org/2000/svg" width="1196" height="1" viewBox="0 0 1196 1" fill="none">
 <line y1="0.5" x2="1196" y2="0.5" stroke="black"/>
 </svg>
@@ -244,7 +244,7 @@
 ✅ A bit difficult, but use of search bar was helpful.</p>
 </div>
 <!-- line -->
-<div class ="row" class="col-12">
+<div class ="row col-12">
   <svg xmlns="http://www.w3.org/2000/svg" width="1196" height="1" viewBox="0 0 1196 1" fill="none">
 <line y1="0.5" x2="1196" y2="0.5" stroke="black"/>
 </svg>
@@ -329,7 +329,7 @@
 </div>
 
 <!-- line -->
-<div class ="row" class="col-12">
+<div class ="row col-12">
   <svg xmlns="http://www.w3.org/2000/svg" width="1196" height="1" viewBox="0 0 1196 1" fill="none">
 <line y1="0.5" x2="1196" y2="0.5" stroke="black"/>
 </svg>
@@ -388,7 +388,7 @@
 </div>
 
 <!-- line -->
-<div class ="row" class="col-12">
+<div class ="row col-12">
   <svg xmlns="http://www.w3.org/2000/svg" width="1196" height="1" viewBox="0 0 1196 1" fill="none">
 <line y1="0.5" x2="1196" y2="0.5" stroke="black"/>
 </svg>
@@ -437,14 +437,14 @@ The search bar, NYT home button logo, and menu bars were all super important fea
  </div>
 
 <div class = "row">
-<img class="col-6" src="assets/img/searchbar.png">
-<img class="col-6" src="assets/img/nyt.png">
+<img class="col-6" src="assets/img/searchbar.png" alt="New York Times search bar">
+<img class="col-6" src="assets/img/nyt.png" alt="New York Times Logo Header">
 </div>
 
 <br>
 
 <div class="row">
-  <img id="image" class="col-5" src="assets/img/menu.png">
+  <img class="col-5 image" src="assets/img/menu.png" alt="three horizontal, menu bars stacked on top of each other.">
 </div>
 
 <!-- javascript -->
