making some changes

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
 
 <!-- visible content goes here -->
-<img class = "col-12 image" src="assets/img/nyt.png" alt="New York Times Header Logo">
+<img class = "col-4 image" src="assets/img/nyt.jpeg" alt="New York Times Header Logo">
 <h1>Usability Test</h1>
 
 <!-- line -->
@@ -68,7 +68,7 @@
 
 <div class ="row">
   <h3 class="adjusting col-6">TIME</h3>
-  <p class="adjusting col-6">13 seconds</p>
+  <p class="adjusting col-6">13 seconds 👍</p>
 </div>
 
 <div class ="row">
@@ -154,7 +154,7 @@
 
 <div class ="row">
   <h3 class="col-6">TIME</h3>
-  <p class="col-6">55 seconds</p>
+  <p class="col-6">55 seconds 👎</p>
 </div>
 
 <div class ="row">
@@ -235,7 +235,7 @@
 
 <div class ="row">
   <h3 class="col-6">TIME</h3>
-  <p class="col-6">30 seconds</p>
+  <p class="col-6">30 seconds 👎</p>
 </div>
 
 <div class ="row">
@@ -319,7 +319,7 @@
 
 <div class ="row">
   <h3 class="col-6">TIME</h3>
-  <p class="col-6">34 seconds</p>
+  <p class="col-6">34 seconds 👎</p>
 </div>
 
 <div class ="row">
@@ -378,7 +378,7 @@
 
 <div class ="row">
   <h3 class="col-6">TIME</h3>
-  <p class="col-6">1 second</p>
+  <p class="col-6">1 second 👍</p>
 </div>
 
 <div class ="row">
