--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
 <br>
 
 <div class ="row">
-  <h3 class="adjusting col-6">STEPS</h3>
-  <ol class ="adjusting col-6">
+  <h3 class="adjusting col-sm-6 col-md-3">STEPS</h3>
+  <ol class ="adjusting col-sm-6 col-md-9">
     <li>Opened left sidebar</li>
     <li>Scrolled through the sections</li>
     <li>Found games under “Living”</li>
@@ -437,14 +437,17 @@ The search bar, NYT home button logo, and menu bars were all super important fea
  </div>
 
 <div class = "row">
-<img class="col-6" src="assets/img/searchbar.png" alt="New York Times search bar">
-<img class="col-6" src="assets/img/nyt.png" alt="New York Times Logo Header">
+<img class="col-5 image " src="assets/img/searchbar.png" alt="New York Times search bar">
+</div>
+<br>
+<div class = "row">
+<img class="col-5 image" src="assets/img/nyt.jpeg" alt="New York Times Logo Header">
 </div>
 
 <br>
 
 <div class="row">
-  <img class="col-5 image" src="assets/img/menu.png" alt="three horizontal, menu bars stacked on top of each other.">
+  <img class="col-2 image" src="assets/img/menu.png" alt="three horizontal, menu bars stacked on top of each other.">
 </div>
 
 <!-- javascript -->
